--- a/argentbank/src/components/EditName/EditName.css
+++ b/argentbank/src/components/EditName/EditName.css
@@ -1,7 +1,25 @@
 .edit-button {
+    min-width: 100px;
     border-color: #00bc77;
     background-color: #00bc77;
     color: #fff;
     font-weight: bold;
     padding: 10px;
+}
+
+.edit-form_input {
+    padding: 3px 10px 3px 3px;
+    margin-bottom: 10px;
+}
+
+.edit-form_buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.readOnly {
+    background-color: #b6b6b6;
+    color: #616161;
 }
